# Fastapi-Boilerplate

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5a0fc0ef8b71_test.py
api/: routes.py
api/endpoints/: login.py
core/: config.py
db/: base.py  init_db.py
models/: user.py
