[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["john proud"]

[tool.poetry.dependencies]
python = "^3.9"
FastAPI-SQLAlchemy = "^0.2.1"
alembic = "^1.6.5"
jwt = "^1.2.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.1"
emails = "^0.6"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
